fixed the health check
